--- a/src/elec/electUi.fxml
+++ b/src/elec/electUi.fxml
@@ -153,14 +153,6 @@
                <GridPane.margin>
                   <Insets bottom="70.0" />
                </GridPane.margin></Button>
-            <LineChart fx:id="elecProd" prefHeight="166.0" prefWidth="300.0" GridPane.columnIndex="6" GridPane.columnSpan="5" GridPane.hgrow="NEVER" GridPane.rowIndex="3" GridPane.rowSpan="2147483647" GridPane.vgrow="NEVER">
-              <xAxis>
-                <CategoryAxis side="BOTTOM" />
-              </xAxis>
-              <yAxis>
-                <NumberAxis prefHeight="286.0" prefWidth="28.0" side="LEFT" />
-              </yAxis>
-            </LineChart>
             <ProgressBar fx:id="zeroOneProg" prefWidth="200.0" progress="0.0" GridPane.columnSpan="2" />
             <ProgressBar fx:id="oneOneProg" prefWidth="200.0" progress="0.0" GridPane.columnSpan="2" GridPane.rowIndex="1" />
             <ProgressBar fx:id="twoOneProg" prefWidth="200.0" progress="0.0" GridPane.columnSpan="2" GridPane.rowIndex="2" />
@@ -346,6 +338,14 @@
                <padding>
                   <Insets left="30.0" />
                </padding></Label>
+            <AreaChart fx:id="elecProd" prefHeight="169.0" prefWidth="361.0" GridPane.columnIndex="6" GridPane.columnSpan="5" GridPane.rowIndex="3">
+              <xAxis>
+                <CategoryAxis side="BOTTOM" />
+              </xAxis>
+              <yAxis>
+                <NumberAxis side="LEFT" />
+              </yAxis>
+            </AreaChart>
          </children>
          <GridPane.margin>
             <Insets />
