--- a/src/elec/electUi.fxml
+++ b/src/elec/electUi.fxml
@@ -141,7 +141,7 @@
                   <Insets top="50.0" />
                </GridPane.margin>
             </Label>
-            <Button fx:id="oneOneAs" ellipsisString="Hamser wheel" mnemonicParsing="false" onAction="#oneOneClick" prefHeight="25.0" prefWidth="176.0" text="Hamser wheel" GridPane.columnIndex="8" GridPane.columnSpan="2" GridPane.rowIndex="1" GridPane.valignment="BOTTOM" GridPane.vgrow="NEVER">
+            <Button fx:id="oneOneAs" ellipsisString="Hamser wheel" mnemonicParsing="false" onAction="#oneOneClick" prefHeight="25.0" prefWidth="176.0" text="Hamster wheel" GridPane.columnIndex="8" GridPane.columnSpan="2" GridPane.rowIndex="1" GridPane.valignment="BOTTOM" GridPane.vgrow="NEVER">
                <GridPane.margin>
                   <Insets bottom="70.0" />
                </GridPane.margin></Button>
